--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <div class="sort-ui">
                     <span>Sort By: </span>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-default" ng-class="{active: ifSortedBy}"
+                        <button type="button" class="btn btn-default" ng-class="{active: ifSortedBy('lastName')}"
                         ng-click="sortBy('lastName')">Last Name</button>
-                        <button type="button" class="btn btn-default" ng-class="{active: ifSortedBy}"
+                        <button type="button" class="btn btn-default" ng-class="{active: ifSortedBy('firstName')}"
                         ng-click="sortBy('firstName')">First Name</button>
-                        <button type="button" class="btn btn-default" ng-class="{active: ifSortedBy}"
+                        <button type="button" class="btn btn-default" ng-class="{active: ifSortedBy('department')}"
                         ng-click="sortBy('department')">Department</button>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
 
             <section>
                 <ul class="cards">
-                    <li class="card" ng-repeat="employee in employees | filter : searchString | orderBy : sortCol : sortReverse">
+                    <li class="card" ng-repeat="employee in employees | filter : searchString | orderBy : sortCol">
                         <!-- this img should show the employee picture --> 
                         <img ng-src="{{employee.picUrl}}" alt="Picture of {{employee.firstName}} {{employee.lastName}}">
                         <div class="details">
